panel overflow corrections

--- a/css/style.css
+++ b/css/style.css
@@ -6507,7 +6507,7 @@ body {
   min-width: calc(var(--spectrum-global-dimension-size-3000) + 32px);
   border-right: 2px solid var(--spectrum-panel-border-color);
   padding: 0;
-  overflow: scroll; }
+  overflow: hidden; }
 
 .spectrum-Panel--small {
   width: var(--spectrum-global-dimension-size-3000);
@@ -6935,7 +6935,7 @@ colorOutput-field {
   resize: none; }
 
 #colorOutputs {
-  max-height: calc(100vh - var(--header-height) - 250px);
+  max-height: calc(100vh - var(--header-height) - 258px);
   overflow: scroll; }
 
 .spectrum-Textfield-swatch {
@@ -7079,7 +7079,7 @@ a:focus {
   border-radius: 4px;
   padding: 8px;
   margin: 0 -8px;
-  width: 100%;
+  width: calc(100% - 4px);
   overflow: scroll; }
 
 #scaleWrapper, #ratiosWrapper, #ratios {
@@ -7187,7 +7187,8 @@ g.d3_xy_chart_line path.line {
 
 #scaleConfigs {
   display: flex;
-  flex-direction: column; }
+  flex-direction: column;
+  padding-top: 8px; }
 
 .tabcontent {
   display: none; }
